Fixed dark theme navbar link hover bg-color

--- a/resources/assets/sass/dark.scss
+++ b/resources/assets/sass/dark.scss
@@ -52,6 +52,7 @@ $link-hover-color: lighten($info, 10%);
 //navbar
 $navbar-dark-color: rgba(255, 255, 255, .75);
 $navbar-dark-hover-color: #fff;
+$dropdown-link-hover-bg: $dark;
 
 //photos
 $photo_pop-color: #fff;
