--- a/resources/assets/sass/partials/_variables.scss
+++ b/resources/assets/sass/partials/_variables.scss
@@ -1,4 +1,4 @@
-$font-family-sans-serif: 'Lato', sans-serif;
+$font-family-sans-serif: "Lato", sans-serif;
 
 $primary: #83b71a;
 $secondary: #6c757d;
@@ -23,5 +23,5 @@ $theme-colors: (
     "omnomcom": $omnomcom,
     "dark": $dark,
     "light": $light,
-    "gold": $gold
+    "gold": $gold,
 );
