--- a/resources/assets/sass/nightMode.scss
+++ b/resources/assets/sass/nightMode.scss
@@ -1,28 +1,28 @@
 @charset "UTF-8";
 
 // Custom variables
-@import 'partials/variables';
+@import "partials/variables";
 
 //colors
 $blue-light: #1e2f62;
 $blue-medium: #0c1f66;
-$blue-dark: #05103A;
+$blue-dark: #05103a;
 $dark: $blue-medium;
 $light: $blue-light;
-$warning:#EA5D0B;
-$info:#028090;
-$brand-primary:#597C13;
+$warning: #ea5d0b;
+$info: #028090;
+$brand-primary: #597c13;
 $theme-colors: (
-        "primary": $primary,
-        "secondary": $secondary,
-        "brand-primary": $brand-primary,
-        "success": $info,
-        "info": $info,
-        "warning": $warning,
-        "danger": $danger,
-        "omnomcom": $omnomcom,
-        "dark": $dark,
-        "light": $light
+    "primary": $primary,
+    "secondary": $secondary,
+    "brand-primary": $brand-primary,
+    "success": $info,
+    "info": $info,
+    "warning": $warning,
+    "danger": $danger,
+    "omnomcom": $omnomcom,
+    "dark": $dark,
+    "light": $light,
 );
 
 //body
@@ -35,7 +35,9 @@ $modal-content-bg: $blue-light;
 //table
 $table-color: #fff;
 $table-border-color: $blue-dark;
-table > tbody { border-top-color: $blue-dark !important; }
+table > tbody {
+    border-top-color: $blue-dark !important;
+}
 
 //list group
 $list-group-bg: $blue-medium;
@@ -52,7 +54,7 @@ $link-color: $info;
 $link-hover-color: lighten($info, 10%);
 
 //navbar
-$navbar-dark-color: rgba(255, 255, 255, .75);
+$navbar-dark-color: rgba(255, 255, 255, 0.75);
 $navbar-dark-hover-color: #fff;
 
 //photos
@@ -74,8 +76,8 @@ $event-hover-bg: $blue-light;
 $card-bg: $blue-light;
 $card-color: #f1f1f1;
 $card-collapse-bg: #fff;
-$card-header:$blue-medium;
-$card-title:$blue-medium;
+$card-header: $blue-medium;
+$card-title: $blue-medium;
 
 //pagination
 $pagination-bg: $blue-dark;
@@ -90,146 +92,175 @@ $popover-bg: $blue-light;
 $popover-header-bg: $blue-medium;
 
 //import bootstrap after setting variables
-@import 'bootstrap';
+@import "bootstrap";
 
 // Vendors (S)CSS
-@import 'partials/vendors';
+@import "partials/vendors";
 
 // concatenated SCSS from views
-@import 'partials/components';
+@import "partials/components";
 
 .text-dark {
-  color: #f1f1f1 !important;
+    color: #f1f1f1 !important;
 }
 
 //horizontal line
 hr {
-  border-color: $blue-dark !important;
+    border-color: $blue-dark !important;
 }
 
 //list group
 .list-group-item {
-  background-color: $blue-medium;
+    background-color: $blue-medium;
 }
 .list-group-item-dark {
-  background-color: $blue-dark;
-  color: #fff;
+    background-color: $blue-dark;
+    color: #fff;
 }
 
 //input
 .form-control[readonly] {
-  background-color: inherit;
-  @extend .text-muted
+    background-color: inherit;
+    @extend .text-muted;
 }
 
 //buttons
 .btn {
-  &-outline-dark {
-    color: #fff;
-    border-color: #aaa;
-    &:hover { background: $info; }
-  }
-
-  &.lamp {
-    &On:hover {
-      background: $primary;
-      border-color: $primary;
+    &-outline-dark {
+        color: #fff;
+        border-color: #aaa;
+        &:hover {
+            background: $info;
+        }
     }
-    &Off:hover {
-      background: $warning;
-      border-color: $warning;
-    }
-  }
 
-  &-close { @extend .btn-close-white }
+    &.lamp {
+        &On:hover {
+            background: $primary;
+            border-color: $primary;
+        }
+        &Off:hover {
+            background: $warning;
+            border-color: $warning;
+        }
+    }
+
+    &-close {
+        @extend .btn-close-white;
+    }
 }
 
 //modals
 .modal-header button {
-  color: #fff;
-  text-shadow: 0 1px 0 $blue-medium;
+    color: #fff;
+    text-shadow: 0 1px 0 $blue-medium;
 }
 
 //cards
-.card.leftborder.leftborder-info { background-color: $blue-medium; }
-.card-header.bg-dark { background-color: $blue-medium !important; }
-.card-header.bg-light { background-color: $blue-dark !important; }
-
+.card.leftborder.leftborder-info {
+    background-color: $blue-medium;
+}
+.card-header.bg-dark {
+    background-color: $blue-medium !important;
+}
+.card-header.bg-light {
+    background-color: $blue-dark !important;
+}
 
 //simplemde
 .editor-toolbar button {
-  @extend .text-white;
-  &.active, &:hover{
-    @extend .bg-dark;
-  }
+    @extend .text-white;
+    &.active,
+    &:hover {
+        @extend .bg-dark;
+    }
 }
 
-.main-footer { background-color: $blue-medium !important; }
+.main-footer {
+    background-color: $blue-medium !important;
+}
 
 .editor-toolbar.disabled-for-preview button {
-  @extend .bg-dark;
+    @extend .bg-dark;
 }
 
 //datetimepicker
-.datetimepicker::-webkit-calendar-picker-indicator { background-color: #f1f1f1; }
+.datetimepicker::-webkit-calendar-picker-indicator {
+    background-color: #f1f1f1;
+}
 
 //custom file labels
 .custom-file-label::after {
-  color: #fff !important;
+    color: #fff !important;
 }
 
 //protube admin search results
 .video:nth-child(2n) {
-  background-color: $blue-medium !important;
+    background-color: $blue-medium !important;
 }
 
 //font-awesome icon picker
 .iconpicker-dropdown ul {
-  background-color: $blue-light !important;
+    background-color: $blue-light !important;
 }
 
 //scrollbar (webkit only)
 html {
-  scrollbar-face-color: $blue-medium;
-  scrollbar-base-color: $blue-medium;
-  scrollbar-3dlight-color: $blue-medium;
-  scrollbar-highlight-color: $blue-medium;
-  scrollbar-track-color: $blue-light;
-  scrollbar-shadow-color: $blue-medium;
+    scrollbar-face-color: $blue-medium;
+    scrollbar-base-color: $blue-medium;
+    scrollbar-3dlight-color: $blue-medium;
+    scrollbar-highlight-color: $blue-medium;
+    scrollbar-track-color: $blue-light;
+    scrollbar-shadow-color: $blue-medium;
 }
 
-::-webkit-scrollbar { width: 10px; height: 3px; }
-::-webkit-scrollbar-track { background-color: $blue-medium; }
-::-webkit-scrollbar-track-piece { background-color: #000; }
-::-webkit-scrollbar-thumb { height: 50px; background-color: #666; border-radius: 3px; }
-::-webkit-scrollbar-corner { background-color: $blue-medium; }
-::-webkit-resizer { background-color: #666; }
-
+::-webkit-scrollbar {
+    width: 10px;
+    height: 3px;
+}
+::-webkit-scrollbar-track {
+    background-color: $blue-medium;
+}
+::-webkit-scrollbar-track-piece {
+    background-color: #000;
+}
+::-webkit-scrollbar-thumb {
+    height: 50px;
+    background-color: #666;
+    border-radius: 3px;
+}
+::-webkit-scrollbar-corner {
+    background-color: $blue-medium;
+}
+::-webkit-resizer {
+    background-color: #666;
+}
 
 .star {
-  --size:#{random(1) * 0.2}vw;
-  width: var(--size);
-  height: var(--size);
-  background: white;
-  border-radius: 50%;
-  position: fixed;
-  z-index: -1;
+    --size: #{random(1) * 0.2}vw;
+    width: var(--size);
+    height: var(--size);
+    background: white;
+    border-radius: 50%;
+    position: fixed;
+    z-index: -1;
 }
 
 @keyframes grow {
-  0%, 100% {
-    transform: scale(0.3);
-  }
-  50% {
-    transform: scale(1.4);
-  }
+    0%,
+    100% {
+        transform: scale(0.3);
+    }
+    50% {
+        transform: scale(1.4);
+    }
 }
 
 @for $i from 1 through 240 {
-  .star:nth-child(#{$i}) {
-    left: #{random(100)}vw;
-    top: #{random(100)}vh;
-    animation: grow #{5 - random(3)}s linear infinite;
-    animation-delay: -#{random(20)}s;
-  }
+    .star:nth-child(#{$i}) {
+        left: #{random(100)}vw;
+        top: #{random(100)}vh;
+        animation: grow #{5 - random(3)}s linear infinite;
+        animation-delay: -#{random(20)}s;
+    }
 }
