--- a/resources/assets/sass/partials/_vendors.scss
+++ b/resources/assets/sass/partials/_vendors.scss
@@ -1,6 +1,6 @@
 //Import all the free fontawesome files
-@import '@fortawesome/fontawesome-free/scss/fontawesome.scss';
-@import '@fortawesome/fontawesome-free/css/brands.css';
-@import '@fortawesome/fontawesome-free/css/solid.css';
-@import '@fortawesome/fontawesome-free/css/v5-font-face.css';
-@import '@fortawesome/fontawesome-free/css/v4-font-face.css';
+@import "@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "@fortawesome/fontawesome-free/css/brands.css";
+@import "@fortawesome/fontawesome-free/css/solid.css";
+@import "@fortawesome/fontawesome-free/css/v5-font-face.css";
+@import "@fortawesome/fontawesome-free/css/v4-font-face.css";
