--- a/resources/assets/sass/dark.scss
+++ b/resources/assets/sass/dark.scss
@@ -30,6 +30,11 @@ $body-color: #fff;
 //modal
 $modal-content-bg: $grey-medium;
 
+//tooltips
+.tooltip .tooltip-inner {
+    color: #fff !important;
+}
+
 //table
 $table-color: #fff;
 $table-border-color: $grey-light;
