Add support for the omnomcom being vertical

--- a/resources/assets/sass/partials/_components.scss
+++ b/resources/assets/sass/partials/_components.scss
@@ -628,26 +628,6 @@ a.card {
     user-select: none;
 }
 
-//OmNomCom
-#display-fullscreen {
-    display: none;
-    .modal-dialog-centered {
-        max-width: 500px;
-    }
-    img {
-        height: 200px;
-    }
-}
-
-@media (max-width: 1280px) and (max-height: 720px), (orientation: portrait) {
-    #omnomcom {
-        display: none;
-    }
-    #display-fullscreen {
-        display: unset;
-    }
-}
-
 #omnomcom {
     .btn-category {
         min-width: 190px;
@@ -682,6 +662,10 @@ a.card {
     }
 
     .product {
+        *{
+            corner-shape: squircle;
+            border-radius: 40px;
+        }
         padding: 10px 0 0 10px;
 
         &:hover:not(.nostock) {
@@ -711,13 +695,25 @@ a.card {
             right: 0;
             bottom: 0;
             background-color: #333;
+            padding: 15px;
+        }
+
+        &-stock {
+            position: absolute;
+            top: 0;
+            right: 0;
+            float: right;
+            margin: 10px;
+            padding: 10px;
+            background-color: #111;
+            color: #fff;
         }
 
         &-name {
+            max-height: 90px;
             margin: 10px;
-            text-align: right;
-            font-size: 20px;
-            max-height: 56px;
+            text-align: left;
+            font-size: 30px;
             overflow: hidden;
             text-overflow: ellipsis;
         }
@@ -730,15 +726,6 @@ a.card {
             color: #fff;
             font-weight: bold;
             background-color: #26ade4;
-        }
-
-        &-stock {
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
-            padding: 10px;
-            color: #fff;
-            background-color: #111;
         }
 
         &-image {
