--- a/resources/assets/sass/partials/_components.scss
+++ b/resources/assets/sass/partials/_components.scss
@@ -628,26 +628,6 @@ a.card {
     user-select: none;
 }
 
-//OmNomCom
-#display-fullscreen {
-    display: none;
-    .modal-dialog-centered {
-        max-width: 500px;
-    }
-    img {
-        height: 200px;
-    }
-}
-
-@media (max-width: 1280px) and (max-height: 720px), (orientation: portrait) {
-    #omnomcom {
-        display: none;
-    }
-    #display-fullscreen {
-        display: unset;
-    }
-}
-
 #omnomcom {
     .btn-category {
         min-width: 190px;
@@ -682,6 +662,10 @@ a.card {
     }
 
     .product {
+        * {
+            corner-shape: squircle;
+            border-radius: 40px;
+        }
         padding: 10px 0 0 10px;
 
         &:hover:not(.nostock) {
@@ -700,7 +684,7 @@ a.card {
             position: relative;
             width: 100%;
             height: 130px;
-            background-color: #333;
+            background-color: rgba(51, 51, 51, 0.98);
             color: #fff;
         }
 
@@ -710,19 +694,30 @@ a.card {
             left: 130px;
             right: 0;
             bottom: 0;
-            background-color: #333;
+            padding: 15px;
+        }
+
+        &-stock {
+            float: inline-end;
+            padding: 10px;
+            background-color: #111;
+            color: #fff;
         }
 
         &-name {
-            margin: 10px;
-            text-align: right;
-            font-size: 20px;
-            max-height: 56px;
+            max-height: 90px;
+            margin-right: 10px;
+            margin-left: 10px;
+            margin-bottom: 10px;
+            margin-top: 0px;
+            text-align: left;
+            font-size: 30px;
             overflow: hidden;
             text-overflow: ellipsis;
         }
 
         &-price {
+            font-size: 15px;
             position: absolute;
             bottom: 10px;
             left: -50px;
@@ -730,15 +725,6 @@ a.card {
             color: #fff;
             font-weight: bold;
             background-color: #26ade4;
-        }
-
-        &-stock {
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
-            padding: 10px;
-            color: #fff;
-            background-color: #111;
         }
 
         &-image {
@@ -763,12 +749,6 @@ a.card {
     }
 
     .user {
-        &-age {
-            color: #fff;
-            font-weight: bold;
-            background-color: #26ade4;
-        }
-
         &-image {
             background-size: cover;
             background-position: center center;
