--- a/resources/assets/sass/partials/_components.scss
+++ b/resources/assets/sass/partials/_components.scss
@@ -691,7 +691,7 @@ a.card {
         &-details {
             position: absolute;
             top: 0;
-            left: 130px;
+            left: 120px;
             right: 0;
             bottom: 0;
             padding: 15px;
@@ -717,22 +717,23 @@ a.card {
         }
 
         &-price {
-            font-size: 15px;
+            font-size: 14px;
             position: absolute;
             bottom: 10px;
-            left: -50px;
+            left: -45px;
             padding: 10px;
             color: #fff;
             font-weight: bold;
             background-color: #26ade4;
+            opacity: 90%;
         }
 
         &-image {
             position: absolute;
             top: 20px;
-            left: 20px;
+            left: 15px;
             bottom: 20px;
-            padding: 15px;
+            padding: 10px;
             width: 90px;
             border-radius: 45px;
             background-color: #111;
