--- a/resources/js/pages/Wrapped/wrapped.css
+++ b/resources/js/pages/Wrapped/wrapped.css
@@ -123,12 +123,12 @@ body {
 }
 
 .omnomcom {
-    color: rgb(50, 50, 255);
+    color: #c0ff33;
     text-shadow:
-        blue -0.1em -0.1em 0.2em,
-        blue -0.1em 0.1em 0.2em,
-        blue 0.1em -0.1em 0.2em,
-        blue 0.1em 0.1em 0.2em;
+        green -0.1em -0.1em 0.2em,
+        green -0.1em 0.1em 0.2em,
+        green 0.1em -0.1em 0.2em,
+        green 0.1em 0.1em 0.2em;
 }
 
 .dynamic {
